bdr.BDR2.scala.code
while (isOverMessage()){
  var lecture=readMessage()
  lecture match {
  	case lecture=="R" => right(); forward()
  	case lecture=="L" => left(); forward()
  	case lecture=="I" => right(); right(); forward()
  	case lecture=="A" => forward()
  	case lecture=="B" => forward(); forward()
  	case lecture=="C" => forward(); forward(); forward()
  	case lecture=="D" => forward(); forward(); forward(); forward()
  	case lecture=="E" => forward(); forward(); forward(); forward(); forward()
  	case lecture=="F" => forward(); forward(); forward(); forward(); forward(); forward()
  	case lecture=="Z" => backdraw()
  	case lecture=="Y" => backdraw(); backdraw()
  	case lecture=="X" => backdraw(); backdraw(); backdraw()
  	case lecture=="W" => backdraw(); backdraw(); backdraw(); backdraw()
  	case lecture=="V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
  	case lecture=="U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
  }
}